--- a/src/styles/measure.scss
+++ b/src/styles/measure.scss
@@ -35,26 +35,14 @@
     padding-right: $emValue;
   }
 }
-$font10px: 0.625rem;
-$font11px: 0.6875rem;
-$font12px: 0.75rem;
-$font13px: 0.8125rem;
-$font14px: 0.875rem;
-$font15px: 0.9375rem;
-$font16px: 1rem;
-$font20px: 1.25rem;
-$font24px: 1.5rem;
+$font10pt: 0.8300920204603125rem;
+$font15pt: 1.2451380306905rem;
+$font25pt: 2.0752300625rem;
 
-@for $i from 10 through 16 {
+@for $i from 10 through 25 {
   $value: ($i + 1px) - 1px;
   $remSize: $value / 16px;
   .font-#{$i} {
-    font-size: #{$remSize}rem;
+    font-size: #{$remSize}rem !important;
   }
-}
-.font-20 {
-  font-size: $font20px;
-}
-.font-24 {
-  font-size: $font24px;
 }
