Layout modal de cadastro HOme.vue

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,7 @@
 @import "~bulma/bulma";
 @import "~animate.css/animate.css";
 @import "./assets/fonts/uoltext/stylesheet.css";
+@import "./assets/icons/css/font-awesome.css";
 @import "./styles/index.scss";
 
 * {
